--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,6 @@ body {
 }
 
 header {
-  width: 70vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -60,17 +59,19 @@ nav div a {
   font-weight: 700;
 }
 
-nav a {
-  margin: 5px;
-  padding: 2px;
-  font-size: .6rem;
-  line-height: 200%;
-  border: 0.5px solid #C4C4C4;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border-radius: 11px;
-  background-color: #fff;
+.title-index {
+  margin: 40px 30px 0 0;
+  font-size: 1.5rem;
   color: #901C1C;
+}
+
+main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .portrait {
@@ -88,5 +89,18 @@ nav a {
   color: #fff;
   font-weight: 700;
   text-align: center;
+}
+
+.tags {
+  margin: 5px;
+  padding: 2px;
+  font-size: .6rem;
+  line-height: 200%;
+  border: 0.5px solid #C4C4C4;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 11px;
+  background-color: #fff;
+  color: #901C1C;
 }
 /*# sourceMappingURL=main.css.map */
