--- a/css/main.scss
+++ b/css/main.scss
@@ -11,7 +11,20 @@
 @import "./pages/home";
 
 @import "./components/buttons";
+@import "./components/tags";
 
 
+    // getTags() {
+    //   tagHtml = '<p>';
+    //   this.photographers.forEach(element => {
+    //     // console.log(element.tags);
+    //     this.tags = element.tags;
+    //     this.tags.forEach(tag => {
+    //       this.tag = tag;
+    //       tagHtml+=`<a>${this.tag}</a>`;
+    //     })
+    //   })
+    //   console.log(tagHtml);
+    // }
 
 
