--- a/css/pages/_home.scss
+++ b/css/pages/_home.scss
@@ -1,3 +1,14 @@
+.title-index {
+    margin: 40px 30px 0 0;
+    font-size: 1.5rem;
+    color: $primary-color;
+}
+
+main {
+    display: flex;
+    justify-content: space-between;
+}
+
 .portrait {
     width: 150px;
     height: 150px;
