--- a/css/main.scss
+++ b/css/main.scss
@@ -12,19 +12,7 @@
 
 @import "./components/buttons";
 @import "./components/tags";
+@import "./components/media";
 
-
-    // getTags() {
-    //   tagHtml = '<p>';
-    //   this.photographers.forEach(element => {
-    //     // console.log(element.tags);
-    //     this.tags = element.tags;
-    //     this.tags.forEach(tag => {
-    //       this.tag = tag;
-    //       tagHtml+=`<a>${this.tag}</a>`;
-    //     })
-    //   })
-    //   console.log(tagHtml);
-    // }
 
 
