--- a/css/components/_tags.scss
+++ b/css/components/_tags.scss
@@ -1,7 +1,8 @@
 .tags {
     margin: 5px;
     padding: 2px;
-    font-size: .6rem;
+    font-size: 12px;
+    font-weight: 500;
     line-height: 200%;
     border: 0.5px solid #C4C4C4;
     box-sizing: border-box;
