--- a/css/components/_buttons.scss
+++ b/css/components/_buttons.scss
@@ -1,9 +1,12 @@
 // static button
-.button {
-    width: 170px;
-    height: 70px;
-    background-color: $primary-color;
-    color: #fff;
+button {
+    max-height: 27px;
+    margin: 3px;
+    padding: 3px 5px;
+    background-color: #fff;
+    color: $primary-color;
+    border: .5px solid #C4C4C4;
+    border-radius: 11px;
     font-weight: 700;
     text-align: center;
 }
