--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ ul {
 }
 
 body {
+  width: 90%;
   font-family: 'DM Sans', sans-serif;
   font-size: .8rem;
   font-weight: 400;
@@ -28,28 +29,54 @@ h2 {
 }
 
 header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  width: 100%;
+  position: fixed;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-bottom: 30px;
+}
+
+.logo, nav, h1 {
+  -ms-grid-row: 2;
+  grid-row: 2;
+  margin: 0 10px;
 }
 
 .logo {
   width: 12rem;
-  padding: 10px 0 0 20px;
+  padding-top: 10px;
 }
 
-nav {
+#go-up {
+  display: none;
+  width: 200px;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 4;
+  grid-column: 1/5;
+  margin: 10px auto;
+  padding: 0 5px;
+  font-size: 18px;
+  font-weight: 700;
+  background-color: #D3573C;
+  border: 1px solid #D3573C;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.tag-resumeview {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2/4;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -60,9 +87,9 @@ h1 {
 }
 
 .title-index {
-  margin: 40px 30px 0 0;
-  font-size: 1.5rem;
+  font-size: 36px;
   color: #901C1C;
+  font-weight: 400;
 }
 
 main {
@@ -78,17 +105,18 @@ main {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+  padding-top: 130px;
 }
 
 .resume-view {
-  width: 250px;
-  margin: 15px;
+  width: 450px;
+  margin-bottom: 350px;
   text-align: center;
 }
 
 .resume-view .portrait {
-  width: 150px;
-  height: 150px;
+  width: 200px;
+  height: 200px;
   border-radius: 50%;
   -o-object-fit: cover;
      object-fit: cover;
@@ -112,10 +140,127 @@ main {
   color: #757575;
 }
 
+.margin {
+  height: 100px;
+  padding-top: 100px;
+}
+
+.full-view {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 30px;
+  background-color: #fafafa;
+  border-radius: 5px;
+}
+
+.full-view .localisation, .full-view .tagline-fullview, .full-view .tag-fullview {
+  margin: 10px 0;
+}
+
+.full-view .name-fullview {
+  font-size: 64px;
+}
+
+.full-view .localisation {
+  color: #901C1C;
+  font-size: 24px;
+}
+
+.full-view .tagline-fullview {
+  font-size: 18px;
+}
+
+.full-view .tag-fullview {
+  font-size: 18px;
+}
+
+.full-view .portrait-fullview {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.bground {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  height: 669px;
+  width: 900px;
+  overflow: auto;
+  background-color: #DB8876;
+}
+
+.bground .content {
+  position: relative;
+  margin: 5% auto;
+  width: 900px;
+  -webkit-animation-name: modalopen;
+          animation-name: modalopen;
+  -webkit-animation-duration: var(--modal-duration);
+          animation-duration: var(--modal-duration);
+  background-color: #DB8876;
+  border-radius: 10px;
+  overflow: hidden;
+  color: #fff;
+}
+
+.bground .content .title-form, .bground .content .photographer-name {
+  font-size: 64px;
+  font-weight: 400;
+  color: #000;
+}
+
+.bground .content .modal-body, .bground .content .title-form, .bground .content .photographer-name {
+  padding: 15px 8%;
+  margin: 15px auto;
+}
+
+.bground .content .modal-body .formData, .bground .content .title-form .formData, .bground .content .photographer-name .formData {
+  margin-top: 10px;
+}
+
+.bground .content .modal-body .formData label, .bground .content .title-form .formData label, .bground .content .photographer-name .formData label {
+  margin-top: 10px;
+  font-size: 36px;
+  color: #000;
+}
+
+.bground .content .modal-body .formData .text-control, .bground .content .title-form .formData .text-control, .bground .content .photographer-name .formData .text-control {
+  border-radius: 5px;
+  border: none;
+}
+
+.bground .content .modal-body .formData .text-control, .bground .content .title-form .formData .text-control, .bground .content .photographer-name .formData .text-control {
+  width: 600px;
+  height: 70px;
+  background-color: #fff;
+}
+
+.bground .content .modal-body .formData .message, .bground .content .title-form .formData .message, .bground .content .photographer-name .formData .message {
+  height: 170px;
+}
+
+.bground .content .modal-body .btn-submit, .bground .content .title-form .btn-submit, .bground .content .photographer-name .btn-submit {
+  width: 170px;
+  height: 70px;
+  margin-top: 30px;
+  background-color: #901C1C;
+  font-size: 18px;
+  color: #fff;
+  border-radius: 5px;
+  border: none;
+}
+
 button {
   max-height: 27px;
   margin: 3px;
-  padding: 3px 5px;
+  padding: 3px 10px;
   background-color: #fff;
   color: #901C1C;
   border: .5px solid #C4C4C4;
