--- a/css/pages/_home.scss
+++ b/css/pages/_home.scss
@@ -1,7 +1,7 @@
 .title-index {
-    margin: 40px 30px 0 0;
-    font-size: 1.5rem;
+    font-size: 36px;
     color: $primary-color;
+    font-weight: 400;
 }
 
 main {
@@ -9,16 +9,18 @@ main {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    padding-top: 130px;
 }
 
 
 .resume-view {
-    width: 250px;
-    margin: 15px;
+    width: 450px;
+    // margin: 15px;
+    margin-bottom: 350px;
     text-align: center;
     .portrait {
-        width: 150px;
-        height: 150px;
+        width: 200px;
+        height: 200px;
         border-radius: 50%;
         object-fit: cover;
     }
