--- a/css/components/_buttons.scss
+++ b/css/components/_buttons.scss
@@ -1,12 +1,29 @@
 // static button
-button {
-    max-height: 27px;
-    margin: 3px;
-    padding: 3px 10px;
-    background-color: #fff;
-    color: $primary-color;
-    border: .5px solid #C4C4C4;
-    border-radius: 11px;
-    font-weight: 700;
-    text-align: center;
+// button {
+//     max-height: 27px;
+//     margin: 3px;
+//     padding: 3px 10px;
+//     background-color: #fff;
+//     color: $primary-color;
+//     border: .5px solid #C4C4C4;
+//     border-radius: 11px;
+//     font-weight: 700;
+//     text-align: center;
+// }
+
+.contact-btn {
+    height: 69px;
+    width: 170px;
+    font-size: 20px;
+    background-color: $primary-color;
+    color: #fff;
+    border-radius: 5px;
+    border: 1px solid #901c1c;
+    transition: all .3s ease-in-out;
+    cursor: pointer;
+    &:hover, &:focus {
+        background-color: $tertiary-color;
+        color: #000;
+        border-color: $tertiary-color;
+    }
 }
