--- a/css/components/_tags.scss
+++ b/css/components/_tags.scss
@@ -1,11 +1,21 @@
 .tags {
     margin: 5px;
     padding: 2px;
+    font-family: 'DM Sans', sans-serif;
     font-size: 12px;
     font-weight: 500;
-    line-height: 200%;
+    line-height: 16px;
     border: 0.5px solid #C4C4C4;
     box-sizing: border-box;
     border-radius: 11px;
+    cursor: pointer;
     @include secondary-light-color-theme;
+    transition: all .3s ease-in-out;
+    &:hover {
+        @include primary-dark-theme;
+        border-color: $primary-color;
+    }
+    &.active{
+        @include primary-dark-theme;
+    }
 }
