--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -1,5 +1,5 @@
 header {
-    width: 100%;
+    width: 90%;
     position: fixed;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -29,6 +29,10 @@ header {
     border: 1px solid #D3573C;
     border-radius: 5px;
     text-align: center;
+    animation: all .5s ease-in-out;
+    &::after {
+        display: block;
+    }
 }
 
 .tag-resumeview {
@@ -38,9 +42,9 @@ header {
     justify-content: center;
 }
 
-h1 {
-    padding-right: 30px;
-}
+// h1 {
+//     padding-right: 30px;
+// }
 
 // nav div a {
 //     margin-bottom: 20px;
