--- a/css/main.scss
+++ b/css/main.scss
@@ -7,6 +7,7 @@
 
 @import "./layout/header";
 @import "./layout/footer";
+@import "./layout/contactForm";
 
 @import "./pages/home";
 @import "./pages/photographerPage";
