--- a/css/pages/_photographerPage.scss
+++ b/css/pages/_photographerPage.scss
@@ -6,7 +6,7 @@
 .full-view {
     display: flex;
     justify-content: space-between;
-    padding: 30px;
+    padding: 60px 40px;
     background-color: #fafafa;
     border-radius: 5px;
     .localisation, .tagline-fullview, .tag-fullview {
@@ -26,76 +26,74 @@
         font-size: 18px;
     }
     .portrait-fullview {
-        width: 250px;
-        height: 250px;
+        width: 200px;
+        height: 200px;
         border-radius: 50%;
         object-fit: cover;
     }
 }
 
-.bground {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    // left: 0;
-    // top: 0;
-    height: 669px;
-    width: 900px;
-    overflow: auto;
-    background-color: $tertiary-color;
-    .content {
-        position: relative;
-        margin: 5% auto;
-        // height: 669px;
-        width: 900px;
-        animation-name: modalopen;
-        animation-duration: var(--modal-duration);
-        background-color: $tertiary-color;
-        border-radius: 10px;
-        overflow: hidden;
-        color: #fff;
-        // padding-top: 10px;
-        .title-form, .photographer-name {
-            font-size: 64px;
-            font-weight: 400;
-            color: #000;
+.all-medias {
+    .media {
+        border-radius: 5px;
+    }
+    .media-infos {
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        .media-title {
+            font-size: 24px;
+            color: $primary-color;
         }
-        .modal-body, .title-form, .photographer-name {
-            padding: 15px 8%;
-            margin: 15px auto;
-            .formData {
-                margin-top: 10px;
-                label {
-                    margin-top: 10px;
-                    font-size: 36px;
-                    color: #000;
-                }
-                .text-control {
-                    border-radius: 5px;
-                    border: none;
-                }
-                .text-control {
-                    width: 600px;
-                    height: 70px;
-                    background-color: #fff;
-                }
-                .message {
-                    height: 170px;
-                }
+        .media-likes {
+            display: flex;
+            flex-wrap: nowrap;
+            justify-content: space-between;
+            align-items: center;
+            .sum-likes {
+                margin-right: 10px;
             }
-            .btn-submit {
-                width: 170px;
-                height: 70px;
-                margin-top: 30px;
-                background-color: $primary-color;
-                font-size: 18px;
-                color: #fff;
-                border-radius: 5px;
-                border: none;
-            }
-        }  
+        }
     }
 }
+
+// .media-infos {
+//     display: flex;
+//     flex-wrap: nowrap;
+//     justify-content: space-between;
+// }
+
+.sort {
+    margin: 30px 0;
+    .sort-by {
+        padding: 20px;  
+        font-size: 18px;
+        font-weight: 700;
+    }
+    #select-sort, .selection {
+        width: 170px;
+        height: 70px;
+        @include primary-dark-theme;
+        font-size: 18px;
+        font-weight: 700;
+        padding: 20px;
+        border: 1px solid $primary-color;
+        border-radius: 5px;
+        cursor: pointer;
+        &:focus {
+            border: 1px solid $primary-color;
+
+        } 
+    }
+    #select-sort {
+        border: 1px solid $primary-color;
+        border-radius: 5px;  
+    }
+    .selection {
+        border-bottom: 1px solid #fff;
+    }
+}
+
   
   
 
