--- a/css/main.css
+++ b/css/main.css
@@ -161,8 +161,8 @@ header {
   height: 32px;
   opacity: 1;
   cursor: pointer;
-  -webkit-transform: scale(0.7);
-          transform: scale(0.7);
+  color: #901C1C;
+  font-size: 24px;
 }
 
 .content .close:before,
@@ -448,5 +448,86 @@ main {
 
 .all-medias article .media-likes {
   font-weight: 500;
+}
+
+.modale-container {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modale-container .modale {
+  width: 90%;
+  height: 90%;
+  margin: auto;
+  max-width: 1200px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background-color: #fff;
+}
+
+.modale-container .modale .close {
+  color: #901C1C;
+  font-size: 3em;
+  position: fixed;
+  top: 30px;
+  right: 50px;
+  cursor: pointer;
+}
+
+.modale-container .modale .previous,
+.modale-container .modale .next {
+  font-size: 3em;
+  color: #901C1C;
+  position: fixed;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.modale-container .modale .previous {
+  left: 50px;
+}
+
+.modale-container .modale .next {
+  right: 30px;
+}
+
+.modale-container .modale .close,
+.modale-container .modale .previous,
+.modale-container .modale .next {
+  cursor: pointer;
+}
+
+.modale-container .modale .modale-content {
+  width: 80%;
+  height: 90%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.modale-container .modale .modale-content img {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  border-radius: 5px;
+}
+
+.modale-container.show {
+  display: initial;
 }
 /*# sourceMappingURL=main.css.map */
