--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,7 @@
 @import "./components/buttons";
 @import "./components/tags";
 @import "./components/media";
+@import "./components/lightbox";
 
 
 
