--- a/css/layout/_contactForm.scss
+++ b/css/layout/_contactForm.scss
@@ -1,95 +1,104 @@
-
 .content {
-  // display: none;
-  // position: fixed;
+  display: none;
+  position: fixed;
   z-index: 1;
-  // left: 0;
-  // top: 0;
-  height: 669px;
-  width: 900px;
-  overflow: auto;
-  background-color: $tertiary-color;
-  margin: 5% auto;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  // overflow: auto;
+  background-color: rgba(0, 0, 0, 0.7);
+  // margin: 5% auto;
   // height: 669px;
   // animation-name: modalopen;
   // animation-duration: var(--modal-duration);
-  border-radius: 10px;
-  color: #fff;
+  // border-radius: 10px;
+  // color: #fff;
   // padding-top: 10px;
-  .title-form, .photographer-name {
-    margin: 5px 40px; 
-    font-size: 64px;
-    font-weight: 400;
-    color: #000;
-  }
   .modal-body {
-      padding: 15px 8%;
-      margin: 15px auto;
-      .contact-form {
-        .formInput {
-          display: flex;
-          flex-direction: column;
-          label {
-            margin-top: 10px;
-            font-size: 36px;
-            color: #312E2E;
-          }
-          .text, .textarea {
-              border-radius: 5px;
-              border: none;
-              background-color: #fff;
-          }
-          .text {
-              width: 600px;
-              height: 70px;
-          }
-          .textarea {
-              height: 170px;
-          }
+    position: absolute;
+    width: 50%;
+    height: 90%;
+    // margin: auto;
+    left: 25%;
+    top: 5%;
+    // transform: translate(50%, 50%);
+    border-radius: 5px;
+    background-color: $tertiary-color;
+    .close {
+      position: absolute;
+      right: 20px;
+      top: 10px;
+      // width: 32px;
+      // height: 32px;
+      cursor: pointer;
+      color: $primary-color;
+      font-size: 34px;
+      // transform: scale(0.7);
+    }
+    .title-form,
+    .photographer-name {
+      margin: 0 40px;
+      font-size: 40px;
+      font-weight: 400;
+      color: #000;
+    }
+    .photographer-name {
+      margin-bottom: 20px;
+    }
+    .contact-form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .formInput {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        label {
+          margin-top: 10px;
+          // margin-left: 40px;
+          width: 85%;
+          font-size: 24px;
+          color: #312e2e;
+        }
+        .text,
+        .textarea {
+          // margin-left: 40px;
+          width: 85%;
+          border-radius: 5px;
+          border: none;
+          background-color: #fff;
+        }
+        .text {
+          height: 40px;
+        }
+        .textarea {
+          height: 120px;
+        }
+        .verif {
+          width: 85%;
+          // margin-bottom: 10px;
+          font-size: 12px;
+          color: red;
         }
       }
-      .btn-submit {
+      .submit-btn-container {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 85%;
+        .submit-btn {
           width: 170px;
-          height: 70px;
+          height: 50px;
           margin-top: 30px;
           background-color: $primary-color;
           font-size: 18px;
           color: #fff;
           border-radius: 5px;
           border: none;
+        }  
       }
-  }  
-
-
-.close {
-    position: absolute;
-    right: 15px;
-    top: 15px;
-    width: 32px;
-    height: 32px;
-    opacity: 1;
-    cursor: pointer;
-    color: $primary-color;
-    font-size: 24px;
-    // transform: scale(0.7);
-  }
-  .close:before,
-  .close:after {
-    position: absolute;
-    left: 15px;
-    content: " ";
-    height: 33px;
-    width: 3px;
-    background-color: #fff;
-  }
-  .close:before {
-    transform: rotate(45deg);
-  }
-  .close:after {
-    transform: rotate(-45deg);
+    }
   }
 }
-
-
-
-  
