--- a/css/main.css
+++ b/css/main.css
@@ -476,7 +476,7 @@ main {
   font-weight: 500;
 }
 
-.modale-container {
+.lightbox-container {
   display: none;
   position: fixed;
   left: 0;
@@ -486,7 +486,7 @@ main {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.modale-container .modale {
+.lightbox-container .lightbox {
   width: 90%;
   height: 90%;
   margin: auto;
@@ -499,7 +499,7 @@ main {
   background-color: #fff;
 }
 
-.modale-container .modale .close {
+.lightbox-container .lightbox .close {
   color: #901C1C;
   font-size: 3em;
   position: fixed;
@@ -508,8 +508,8 @@ main {
   cursor: pointer;
 }
 
-.modale-container .modale .previous,
-.modale-container .modale .next {
+.lightbox-container .lightbox .previous,
+.lightbox-container .lightbox .next {
   font-size: 3em;
   color: #901C1C;
   position: fixed;
@@ -518,21 +518,21 @@ main {
           transform: translate(-50%, -50%);
 }
 
-.modale-container .modale .previous {
+.lightbox-container .lightbox .previous {
   left: 50px;
 }
 
-.modale-container .modale .next {
+.lightbox-container .lightbox .next {
   right: 30px;
 }
 
-.modale-container .modale .close,
-.modale-container .modale .previous,
-.modale-container .modale .next {
+.lightbox-container .lightbox .close,
+.lightbox-container .lightbox .previous,
+.lightbox-container .lightbox .next {
   cursor: pointer;
 }
 
-.modale-container .modale .modale-content {
+.lightbox-container .lightbox .lightbox-content {
   width: 80%;
   height: 90%;
   position: fixed;
@@ -542,7 +542,7 @@ main {
           transform: translate(-50%, -50%);
 }
 
-.modale-container .modale .modale-content img {
+.lightbox-container .lightbox .lightbox-content img {
   width: 100%;
   height: 100%;
   position: fixed;
@@ -553,7 +553,7 @@ main {
   border-radius: 5px;
 }
 
-.modale-container.show {
+.lightbox-container.show {
   display: initial;
 }
 /*# sourceMappingURL=main.css.map */
