--- a/css/components/_lightbox.scss
+++ b/css/components/_lightbox.scss
@@ -52,8 +52,8 @@
       left: 50%;
       transform: translate(-50%, -50%);
       img {
-        width: 100%;
-        height: 100%;
+        max-width: 100%;
+        max-height: 100%;
         position: fixed;
         top: 50%;
         left: 50%;
