--- a/css/components/_media.scss
+++ b/css/components/_media.scss
@@ -3,22 +3,35 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    align-items: flex-start;
     article {
         padding: 30px;
         .media {
-            width: 300px;
+            width: 350px;
             height: 300px;
             object-fit: cover;
         }
-        .media-title, .media-likes {
-            font-size: 24px;
-            color: $primary-color;
-        }
-        .media-title {
-            font-weight: 400;
-        }
-        .media-likes {
-            font-weight: 500;
+        .media-infos {
+            width: 350px;
+            padding-top: 5px;
+            .media-title, .media-likes {
+                font-size: 24px;
+                color: $primary-color;
+            }
+            .media-title {
+                font-weight: 400;
+            }
+            .media-likes {
+                font-weight: 500;
+                .sum-likes {
+                    width: 35px;
+                }
+                .fa-heart {
+                    width: 30px;
+                    margin-left: 3px;
+                    padding-right: 5px
+                }
+            }    
         }
     }
 }
