--- a/css/layout/_contactForm.scss
+++ b/css/layout/_contactForm.scss
@@ -17,12 +17,12 @@
   // padding-top: 10px;
   .modal-body {
     position: absolute;
-    width: 50%;
+    width: 560px;
     height: 90%;
-    // margin: auto;
-    left: 25%;
-    top: 5%;
-    // transform: translate(50%, 50%);
+    overflow: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     border-radius: 5px;
     background-color: $tertiary-color;
     .close {
@@ -78,9 +78,11 @@
         }
         .verif {
           width: 85%;
+          margin-top: 5px;
           // margin-bottom: 10px;
-          font-size: 12px;
-          color: red;
+          font-size: 16px;
+          font-weight: 500;
+          color: rgb(214, 22, 22);
         }
       }
       .submit-btn-container {
@@ -91,7 +93,7 @@
         .submit-btn {
           width: 170px;
           height: 50px;
-          margin-top: 30px;
+          margin: 30px 0;
           background-color: $primary-color;
           font-size: 18px;
           color: #fff;
