--- a/css/pages/_home.scss
+++ b/css/pages/_home.scss
@@ -9,12 +9,12 @@ main {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    padding-top: 130px;
+    padding-top: 150px;
 }
 
 
 .resume-view {
-    width: 450px;
+    width: 350px;
     // margin: 15px;
     margin-bottom: 80px;
     text-align: center;
@@ -40,6 +40,12 @@ main {
     .price {
         font-size: 9px;
         color: #757575;
+    }
+}
+
+@media (max-width: $large-screen) {
+    main {
+        padding-top: 250px;
     }
 }
 
