--- a/css/pages/_photographerPage.scss
+++ b/css/pages/_photographerPage.scss
@@ -34,25 +34,29 @@
 }
 
 .all-medias {
-    .media {
-        border-radius: 5px;
-    }
-    .media-infos {
+    article {
+        width: 350px;
         display: flex;
-        flex-wrap: nowrap;
-        justify-content: space-between;
-        .media-title {
-            font-size: 24px;
-            color: $primary-color;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        .media {
+            border-radius: 5px;
         }
-        .media-likes {
+        .media-infos {
             display: flex;
             flex-wrap: nowrap;
             justify-content: space-between;
-            align-items: center;
-            .sum-likes {
-                margin-right: 10px;
+            .media-title {
+                font-size: 24px;
+                color: $primary-color;
             }
+            .media-likes {
+                display: flex;
+                flex-wrap: nowrap;
+                justify-content: space-between;
+                align-items: center;
+            }    
         }
     }
 }
@@ -91,6 +95,27 @@
     }
     .selection {
         border-bottom: 1px solid #fff;
+    }
+}
+
+@media (max-width: $large-screen) {
+    .full-view {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        justify-items: center;
+        .portrait-fullview {
+            grid-row: 1;
+        }
+        .photographer-info {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 30px 0;
+        }
+    }
+    .sort {
+        display: flex;
+        justify-content: center;
     }
 }
 
