--- a/css/components/_media.scss
+++ b/css/components/_media.scss
@@ -10,6 +10,7 @@
             width: 350px;
             height: 300px;
             object-fit: cover;
+            cursor: pointer;
         }
         .media-infos {
             width: 350px;
