--- a/css/main.css
+++ b/css/main.css
@@ -265,15 +265,37 @@ main {
 
 .resume-view {
   width: 350px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-bottom: 80px;
-  text-align: center;
 }
 
-.resume-view .portrait, .resume-view h2 {
+.resume-view .link-portrait {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.resume-view .link-portrait .portrait, .resume-view .link-portrait h2 {
   cursor: pointer;
 }
 
-.resume-view .portrait {
+.resume-view .link-portrait .portrait {
   width: 200px;
   height: 200px;
   border-radius: 50%;
@@ -282,6 +304,12 @@ main {
 }
 
 .resume-view p {
+  padding: 2px;
+}
+
+.resume-view .localisation-index,
+.resume-view .tagline-index,
+.resume-view .price {
   padding: 2px;
 }
 
@@ -295,6 +323,7 @@ main {
 }
 
 .resume-view .price {
+  margin-bottom: 5px;
   font-size: 9px;
   color: #757575;
 }
