--- a/css/base/_typography.scss
+++ b/css/base/_typography.scss
@@ -5,7 +5,12 @@ body {
 }
 
 h2 {
-    color: $secondary-color;
-    font-size: 36px;
-    font-weight: 400;
+    font-size: 24px;
+    color: $primary-color;
 }
+
+// h2 {
+//     color: $secondary-color;
+//     font-size: 36px;
+//     font-weight: 400;
+// }
