--- a/css/main.css
+++ b/css/main.css
@@ -30,13 +30,12 @@ body {
 }
 
 h2 {
-  color: #D3573C;
-  font-size: 36px;
-  font-weight: 400;
+  font-size: 24px;
+  color: #901C1C;
 }
 
 header {
-  width: 90%;
+  width: 100%;
   position: fixed;
   display: -ms-grid;
   display: grid;
@@ -50,7 +49,7 @@ header {
   background-color: #fff;
 }
 
-.logo, nav, h1 {
+.logo, nav, .title-index {
   -ms-grid-row: 2;
   grid-row: 2;
   margin: 0 10px;
@@ -291,7 +290,7 @@ main {
           align-items: center;
 }
 
-.resume-view .link-portrait .portrait, .resume-view .link-portrait h2 {
+.resume-view .link-portrait .portrait, .resume-view .link-portrait .title-name {
   cursor: pointer;
 }
 
@@ -301,6 +300,12 @@ main {
   border-radius: 50%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.resume-view .link-portrait .title-name {
+  font-size: 36px;
+  font-weight: 400;
+  color: #D3573C;
 }
 
 .resume-view p {
@@ -313,9 +318,11 @@ main {
   padding: 2px;
 }
 
-.resume-view .localisation {
+.resume-view .localisation-index {
   color: #901C1C;
   font-size: 13px;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .resume-view .tagline {
@@ -337,6 +344,7 @@ main {
 .margin {
   height: 100px;
   padding-top: 100px;
+  background-color: #fff;
 }
 
 .full-view {
@@ -356,12 +364,16 @@ main {
 }
 
 .full-view .name-fullview {
+  color: #D3573C;
+  font-size: 36px;
+  font-weight: 400;
   font-size: 64px;
 }
 
 .full-view .localisation {
   color: #901C1C;
   font-size: 24px;
+  font-style: normal;
 }
 
 .full-view .tagline-fullview {
@@ -392,9 +404,9 @@ main {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .all-medias article .media {
@@ -410,11 +422,6 @@ main {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-}
-
-.all-medias article .media-infos .media-title {
-  font-size: 24px;
-  color: #901C1C;
 }
 
 .all-medias article .media-infos .media-likes {
@@ -449,7 +456,7 @@ main {
   font-size: 18px;
   font-weight: 700;
   padding: 20px;
-  border: 1px solid #901C1C;
+  border: none;
   border-radius: 5px;
   cursor: pointer;
 }
@@ -463,8 +470,34 @@ main {
   border-radius: 5px;
 }
 
-.sort .selection {
+.sort #select-sort .selection::after {
   border-bottom: 1px solid #fff;
+  height: 70px;
+}
+
+.total-likes-container {
+  width: 250px;
+  height: 80px;
+  position: fixed;
+  bottom: 0;
+  right: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #DB8876;
+  font-size: 24px;
+  color: #000;
+  border-radius: 5px;
+}
+
+.total-likes-container .likes-result .likes-result-heart {
+  margin-left: 5px;
+  font-size: smaller;
 }
 
 @media (max-width: 992px) {
@@ -609,13 +642,12 @@ main {
 }
 
 #container-lightbox {
-  display: none;
   position: fixed;
+  width: 100vw;
+  height: 100vh;
   left: 0;
   top: 0;
-  bottom: 0;
-  right: 0;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 #container-lightbox .lightbox {
@@ -623,20 +655,22 @@ main {
   display: grid;
   -ms-grid-columns: 1fr 12fr 1fr;
       grid-template-columns: 1fr 12fr 1fr;
+  -ms-grid-rows: 2fr 18fr 1fr;
+      grid-template-rows: 2fr 18fr 1fr;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 95%;
-  height: 95%;
-  margin: auto;
   position: fixed;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  width: 100vw;
+  height: 100vh;
+  margin: auto;
   background-color: #fff;
 }
 
@@ -649,9 +683,6 @@ main {
   grid-column: 3 / 4;
   color: #901C1C;
   font-size: 3em;
-  position: fixed;
-  top: 30px;
-  right: 50px;
   cursor: pointer;
 }
 
@@ -679,19 +710,24 @@ main {
 #container-lightbox .lightbox #close-lightbox,
 #container-lightbox .lightbox #prev,
 #container-lightbox .lightbox #next {
+  background-color: #fff;
+  border: none;
   cursor: pointer;
 }
 
 #container-lightbox .lightbox .media-lightbox {
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 1;
-  grid-row: 2/3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-column: 2 / 3;
-  max-width: 90%;
-  max-height: 90%;
+  width: 100%;
+  height: 95%;
+  -o-object-fit: cover;
+     object-fit: cover;
   margin: auto;
+  border-radius: 5px;
 }
 
 #container-lightbox .lightbox .title-media {
@@ -700,5 +736,7 @@ main {
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-column: 2 / 3;
+  font-size: 24px;
+  color: #901C1C;
 }
 /*# sourceMappingURL=main.css.map */
