--- a/css/pages/_home.scss
+++ b/css/pages/_home.scss
@@ -24,7 +24,7 @@ main {
         display: flex;
         flex-direction: column;
         align-items: center;
-        .portrait, h2 {
+        .portrait, .title-name {
             cursor: pointer;
         }
         .portrait {
@@ -32,7 +32,12 @@ main {
             height: 200px;
             border-radius: 50%;
             object-fit: cover;
-        }    
+        }   
+        .title-name {
+            font-size: 36px;
+            font-weight: 400;
+            color: $secondary-color;
+        } 
     }
     p {
         padding: 2px;
@@ -42,9 +47,11 @@ main {
     .price {
         padding: 2px;
     }
-    .localisation {
+    .localisation-index {
         color: $primary-color;
-        font-size: 13px;   
+        font-size: 13px; 
+        font-weight: 400;
+        font-style: normal;  
     }
     .tagline {
         font-size: 10px;
