--- a/css/pages/_photographerPage.scss
+++ b/css/pages/_photographerPage.scss
@@ -1,6 +1,7 @@
 .margin {
     height: 100px;
     padding-top: 100px;
+    background-color: #fff;
 }
 
 .full-view {
@@ -13,11 +14,15 @@
         margin: 10px 0;
     }
     .name-fullview {
+        color: $secondary-color;
+        font-size: 36px;
+        font-weight: 400;    
         font-size: 64px;
     }
     .localisation {
         color: $primary-color;
-        font-size: 24px;   
+        font-size: 24px;  
+        font-style: normal;   
     }
     .tagline-fullview {
         font-size: 18px;
@@ -39,7 +44,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: flex-start;
+        align-items: center;
         .media {
             border-radius: 5px;
         }
@@ -47,10 +52,6 @@
             display: flex;
             flex-wrap: nowrap;
             justify-content: space-between;
-            .media-title {
-                font-size: 24px;
-                color: $primary-color;
-            }
             .media-likes {
                 display: flex;
                 flex-wrap: nowrap;
@@ -81,7 +82,7 @@
         font-size: 18px;
         font-weight: 700;
         padding: 20px;
-        border: 1px solid $primary-color;
+        border: none;
         border-radius: 5px;
         cursor: pointer;
         &:focus {
@@ -92,9 +93,32 @@
     #select-sort {
         border: 1px solid $primary-color;
         border-radius: 5px;  
+        .selection::after {
+            border-bottom: 1px solid #fff;
+            height: 70px;
+        }
+    
     }
-    .selection {
-        border-bottom: 1px solid #fff;
+}
+
+.total-likes-container {
+    width: 250px;
+    height: 80px;
+    position: fixed;
+    bottom: 0;
+    right: 20px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: $tertiary-color;
+    font-size: 24px;    
+    color: #000;
+    border-radius: 5px;
+    .likes-result {
+        .likes-result-heart {
+            margin-left: 5px;
+            font-size: smaller;
+        }
     }
 }
 
