--- a/css/pages/_home.scss
+++ b/css/pages/_home.scss
@@ -24,6 +24,12 @@ main {
         display: flex;
         flex-direction: column;
         align-items: center;
+        transition: all .3s ease-in;
+        transform: scale(1.0);
+        &:hover {
+            transition: all .3s ease-in;
+            transform: scale(1.15);
+        }
         .portrait, .title-name {
             cursor: pointer;
         }
