--- a/css/pages/_photographerPage.scss
+++ b/css/pages/_photographerPage.scss
@@ -26,6 +26,8 @@
     }
     .tagline-fullview {
         font-size: 18px;
+        color: #525252;
+        ;
     }
     .tag-fullview {
         font-size: 18px;
@@ -38,29 +40,6 @@
     }
 }
 
-.all-medias {
-    article {
-        width: 350px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        .media {
-            border-radius: 5px;
-        }
-        .media-infos {
-            display: flex;
-            flex-wrap: nowrap;
-            justify-content: space-between;
-            .media-likes {
-                display: flex;
-                flex-wrap: nowrap;
-                justify-content: space-between;
-                align-items: center;
-            }    
-        }
-    }
-}
 
 // .media-infos {
 //     display: flex;
@@ -116,8 +95,8 @@
     border-radius: 5px;
     .likes-result {
         .likes-result-heart {
-            margin-left: 5px;
-            font-size: smaller;
+            width: 25px;
+            margin-left: 7px;
         }
     }
 }
